--- a/Client/MainPage.xaml
+++ b/Client/MainPage.xaml
@@ -30,9 +30,8 @@
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I"
                 FontSize="18" />
 
-            <Button
+            <library:ButtonEx
                 x:Name="CounterBtn"
-                Text="Click me"
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Center" />
