--- a/class-lib-with-static-resource-dict/Resources.xaml
+++ b/class-lib-with-static-resource-dict/Resources.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Library"
-    x:Class="class_lib_with_static_resource_dict.Resources">
+    x:Class="Library.Resources">
     
     <x:String x:Key="DefaultText">My Text</x:String>
 
