--- a/class-lib-with-static-resource-dict/Resources.xaml
+++ b/class-lib-with-static-resource-dict/Resources.xaml
@@ -9,18 +9,31 @@
 
     <Style
         x:Key="BaseStyleEx"
-        TargetType="local:LabelEx" >
-        <Setter Property="HeightRequest" Value="100" />
+        TargetType="View" >
+        <Setter Property="HeightRequest" Value="50"  />
+        <Setter Property="WidthRequest" Value="150" />
+    </Style>
+    <Style
+        x:Key="BaseLabelStyleEx"
+        TargetType="local:LabelEx"
+        BasedOn="{StaticResource BaseStyleEx}">
         <Setter Property="VerticalTextAlignment" Value="Center" />
         <Setter Property="HorizontalTextAlignment" Value="Center" />
     </Style>
-    <Style TargetType="local:LabelEx" BasedOn="{StaticResource BaseStyleEx}">
+    <Style TargetType="local:LabelEx" BasedOn="{StaticResource BaseLabelStyleEx}">
         <Setter Property="BackgroundColor" Value="WhiteSmoke" />
     </Style>
-    <Style TargetType="local:RedLabel" BasedOn="{StaticResource BaseStyleEx}">
+    <Style TargetType="local:RedLabel" BasedOn="{StaticResource BaseLabelStyleEx}">
         <Setter Property="BackgroundColor" Value="LightSalmon" />
     </Style>
-    <Style TargetType="local:GreenLabel" BasedOn="{StaticResource BaseStyleEx}">
+    <Style TargetType="local:GreenLabel" BasedOn="{StaticResource BaseLabelStyleEx}">
         <Setter Property="BackgroundColor" Value="LightGreen" />
+    </Style>
+    <Style TargetType="local:ButtonEx" BasedOn="{StaticResource BaseStyleEx}">
+        <Setter Property="BackgroundColor" Value="WhiteSmoke" />
+        <Setter Property="TextColor" Value="Maroon" />
+        <Setter Property="CornerRadius" Value="20" />
+        <Setter Property="BorderColor" Value="DarkGray" />
+        <Setter Property="BorderWidth" Value="2" />
     </Style>
 </ResourceDictionary>
